<resources>
    <string name="app_name">SmartShopper</string>
    <string name="sdd_menu">New List</string>
    <string name="edit_stores_menu">Edit Stores</string>
    <string name="edit_items_menu">Edit Items</string>
    <string name="shopping_list_name_label">Name</string>
    <string name="shopping_list_contents_label">Contents</string>
    <string name="shopping_list_name_hint">Shopping List</string>
    <string name="shopping_list_search_hint">Enter item to add</string>
    <string name="edit_list_menu">Edit List</string>
    <string name="edit_list_delete_button">Delete</string>
    <string name="delete_list_menu">Delete List</string>
    <string name="edit_item_name">Name:</string>
    <string name="edit_item_category">Category:</string>
    <string name="edit_list_title">Edit List</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="edit_store_label">Name</string>
    <string name="set_location_button">Set Location</string>
    <string name="add_category_button">Add Categories</string>
    <string name="confirm_location_menu">Confirm Location</string>
    <string name="add_categories_menu_confirm">Confirm Selection</string>
    <string name="delete_store_menu">Delete Store</string>
    <string name="store_list_title">Stores</string>
    <string name="edit_store_title">Edit Store</string>
    <string name="no_nearby_store_toast">No store within 100 meters</string>
    <string name="update_list_menu">Update List</string>
    <string name="new_category_title">Name of category:</string>
    <string name="add_categories_menu_new_category">New Category</string>
</resources>
